[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/haloop_spawn/FallingHaloop.gd" type="Script" id=1]
[ext_resource path="res://graphics/haloop.png" type="Texture" id=2]
[ext_resource path="res://audio/sfx/haloop_fall.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.0
height = 10.0

[node name="FallingHaloop" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
fall_speed = 16.0

[node name="back" type="Sprite" parent="."]
z_index = -10
texture = ExtResource( 2 )
offset = Vector2( 0, -4 )
vframes = 2

[node name="front" type="Sprite" parent="."]
z_index = 10
texture = ExtResource( 2 )
offset = Vector2( 0, 4 )
vframes = 2
frame = 1

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="FallingAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true
attenuation = 1.5

[connection signal="tween_all_completed" from="Tween" to="." method="queue_free"]
[connection signal="area_entered" from="Area2D" to="." method="_on_catch"]
